# HPC_BranchAndBound

./: CMakeLists.txt  README.md  Scatter.cpp  a.out  adjust_sample.cpp  another_sample.cpp  bnb_parallel_v1.cpp  bnb_parallel_v2.cpp  branch_and_bound.cpp  branch_n_bound_parallel.cpp  branch_n_bound_parallel_v2.cpp  branch_n_bound_parallel_v3.cpp  branch_n_bound_parallel_v4.cpp  branch_n_bound_parallel_v5.cpp  branch_n_bound_parallel_v6.cpp  branch_n_bound_serial.cpp  example.cpp  main  main.cpp  optimised_sample.cpp  sample.cpp  scratch.sh  serial  test_sample.cpp  wsp  wsp_bruteforce.cpp
queue/: mpi.sub  mpi16.sub  mpi2.sub  mpi32.sub  mpi4.sub  mpi48.sub  mpi64.sub  mpi8.sub
queue17/: mpi.sub  mpi16.sub  mpi2.sub  mpi32.sub  mpi4.sub  mpi48.sub  mpi64.sub  mpi8.sub  mpi_serial.sub
queue18/: mpi.sub  mpi16.sub  mpi2.sub  mpi32.sub  mpi4.sub  mpi48.sub  mpi64.sub  mpi8.sub  mpi_serial.sub  submit.sh
queue19/: mpi.sub  mpi16.sub  mpi2.sub  mpi32.sub  mpi4.sub  mpi48.sub  mpi64.sub  mpi8.sub  mpi_serial.sub
